--- a/rere.ipynb
+++ b/rere.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "10206237",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "tensor([ 0., 10.,  0.])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "643fee0b",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "0a81611b",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
     "    dataset = data.TensorDataset(*data_arrays)\n",
     "    return data.DataLoader(dataset, batch_size, shuffle=is_train)\n",
     "\n",
-    "batch_size = 10\n",
+    "batch_size = 50\n",
     "data_iter = load_array((features, labels), batch_size)\n"
    ]
   },
@@ -379,15 +379,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1, loss 0.000287\n",
-      "epoch 2, loss 0.000094\n",
-      "epoch 3, loss 0.000095\n",
-      "epoch 4, loss 0.000095\n",
-      "epoch 5, loss 0.000095\n",
-      "epoch 6, loss 0.000094\n",
-      "epoch 7, loss 0.000094\n",
-      "epoch 8, loss 0.000094\n",
-      "epoch 9, loss 0.000095\n"
+      "epoch 1, loss 2.802933\n",
+      "epoch 2, loss 0.280127\n",
+      "epoch 3, loss 0.028205\n",
+      "epoch 4, loss 0.002907\n",
+      "epoch 5, loss 0.000380\n",
+      "epoch 6, loss 0.000127\n",
+      "epoch 7, loss 0.000102\n",
+      "epoch 8, loss 0.000100\n",
+      "epoch 9, loss 0.000099\n",
+      "epoch 10, loss 0.000099\n",
+      "epoch 11, loss 0.000099\n",
+      "epoch 12, loss 0.000099\n",
+      "epoch 13, loss 0.000099\n",
+      "epoch 14, loss 0.000099\n",
+      "epoch 15, loss 0.000099\n",
+      "epoch 16, loss 0.000099\n",
+      "epoch 17, loss 0.000099\n",
+      "epoch 18, loss 0.000099\n",
+      "epoch 19, loss 0.000099\n",
+      "epoch 20, loss 0.000099\n",
+      "epoch 21, loss 0.000099\n",
+      "epoch 22, loss 0.000099\n",
+      "epoch 23, loss 0.000099\n",
+      "epoch 24, loss 0.000099\n",
+      "epoch 25, loss 0.000099\n",
+      "epoch 26, loss 0.000099\n",
+      "epoch 27, loss 0.000099\n",
+      "epoch 28, loss 0.000099\n",
+      "epoch 29, loss 0.000099\n",
+      "epoch 30, loss 0.000099\n",
+      "epoch 31, loss 0.000099\n",
+      "epoch 32, loss 0.000099\n",
+      "epoch 33, loss 0.000099\n",
+      "epoch 34, loss 0.000099\n",
+      "epoch 35, loss 0.000099\n",
+      "epoch 36, loss 0.000099\n",
+      "epoch 37, loss 0.000099\n",
+      "epoch 38, loss 0.000099\n",
+      "epoch 39, loss 0.000099\n",
+      "epoch 40, loss 0.000099\n",
+      "epoch 41, loss 0.000099\n",
+      "epoch 42, loss 0.000099\n",
+      "epoch 43, loss 0.000099\n",
+      "epoch 44, loss 0.000099\n",
+      "epoch 45, loss 0.000099\n",
+      "epoch 46, loss 0.000099\n",
+      "epoch 47, loss 0.000099\n",
+      "epoch 48, loss 0.000099\n",
+      "epoch 49, loss 0.000099\n",
+      "epoch 50, loss 0.000099\n",
+      "epoch 51, loss 0.000099\n",
+      "epoch 52, loss 0.000099\n",
+      "epoch 53, loss 0.000099\n",
+      "epoch 54, loss 0.000099\n",
+      "epoch 55, loss 0.000099\n",
+      "epoch 56, loss 0.000099\n",
+      "epoch 57, loss 0.000099\n",
+      "epoch 58, loss 0.000099\n",
+      "epoch 59, loss 0.000099\n",
+      "epoch 60, loss 0.000099\n",
+      "torch.Size([50, 2]) torch.Size([50, 1])\n"
      ]
     }
    ],
@@ -400,7 +452,7 @@
     "loss_fn = nn.MSELoss()\n",
     "trainer = torch.optim.SGD(net.parameters(), lr=0.03)\n",
     "\n",
-    "num_epochs = 9\n",
+    "num_epochs = 60\n",
     "for epoch in range(num_epochs):\n",
     "    for X, y in data_iter:\n",
     "        l = loss_fn(net(X), y)\n",
@@ -409,12 +461,14 @@
     "        trainer.step()\n",
     "    l = loss_fn(net(features), labels)\n",
     "    print(f'epoch {epoch + 1}, loss {l:f}')\n",
+    "X, y = next(iter(data_iter))\n",
+    "print(X.shape, y.shape)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "id": "73147f4b",
    "metadata": {},
    "outputs": [
@@ -422,12 +476,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[4.1793]], grad_fn=<AddmmBackward0>)\n"
+      "tensor([[4.1800]], grad_fn=<AddmmBackward0>)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(net(torch.tensor([[0.5,0.3]])))"
+    "print(net(torch.tensor([[0.5,0.3]])))\n",
+    "torch.nn.MSELoss()(torch.tensor([[[4.0],[2.0]],[[4.0],[2.0]]]), torch.tensor([[[2.0],[6]],[[2.0],[6]]])).shape"
    ]
   }
  ],
