--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -2,34 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "751c7643",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Customer:\n",
+    "    def __init__(self, name, discount = 0):\n",
+    "        self.name = name\n",
+    "        self.discount = discount\n",
+    "    \n",
+    "    def give_discount(self, amount):\n",
+    "        self.discount += amount\n",
+    "\n",
+    "class VIPCustomer(Customer):\n",
+    "    def __init__(self, name, trial, discount = 0):\n",
+    "        super(VIPCustomer, self).__init__(name, discount)\n",
+    "        self.ewwn = \"Pooop\"\n",
+    "        self.trial = trial\n",
+    "    def give_vip_discount(self, amount):\n",
+    "        self.discount += amount * 2\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f3cddbe1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hEALLA\n",
-      "True\n",
-      "13.0\n",
-      "NVIDIA GeForce RTX 5080\n"
+      "Alice\n",
+      "10\n",
+      "Pooop\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Customer' object has no attribute 'give_vip_discount'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(vip.ewwn)         \u001b[38;5;66;03m# Output: Pooop\u001b[39;00m\n\u001b[32m      6\u001b[39m norm = Customer(\u001b[33m\"\u001b[39m\u001b[33mBob\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43mnorm\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgive_vip_discount\u001b[49m(\u001b[32m5\u001b[39m)  \u001b[38;5;66;03m# This will raise an AttributeError\u001b[39;00m\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Customer' object has no attribute 'give_vip_discount'"
      ]
     }
    ],
    "source": [
-    "print(\"hEALLA\")\n",
-    "import torch\n",
-    "print(torch.cuda.is_available())\n",
-    "print(torch.version.cuda)\n",
-    "if torch.cuda.is_available():\n",
-    "    print(torch.cuda.get_device_name(0))\n"
+    "vip = VIPCustomer(\"Alice\", 10)\n",
+    "vip.give_vip_discount(5)\n",
+    "print(vip.name)          # Output: Alice\n",
+    "print(vip.discount)      # Output: 10\n",
+    "print(vip.ewwn)         # Output: Pooop\n",
+    "norm = Customer(\"Bob\")\n",
+    "norm.give_vip_discount(5)  # This will raise an AttributeError"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python_env_temp",
    "language": "python",
    "name": "python3"
   },
@@ -43,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
