--- a/cel.ipynb
+++ b/cel.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ba423466",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,8 @@
     "    print(f'Epoch {epoch+1:2d} | '\n",
     "          f'Loss {train_loss_sum/n:.4f} | '\n",
     "          f'Train Acc {train_acc_sum/n:.4f} | '\n",
-    "          f'Test Acc {test_acc:.4f}')\n"
+    "          f'Test Acc {test_acc:.4f}')\n",
+    "\n"
    ]
   },
   {
