--- a/BACK_29_1.ipynb
+++ b/BACK_29_1.ipynb
@@ -440,7 +440,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python_env_temp (3.13.5)",
    "language": "python",
    "name": "python3"
   },
@@ -454,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
