--- a/gptnn - Copy.ipynb
+++ b/gptnn - Copy.ipynb
@@ -424,7 +424,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python_env_temp (3.13.5)",
    "language": "python",
    "name": "python3"
   },
@@ -438,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
