--- a/rere.ipynb
+++ b/rere.ipynb
@@ -498,7 +498,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_env_temp",
+   "display_name": "python_env_temp (3.13.5)",
    "language": "python",
    "name": "python3"
   },
@@ -512,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
