--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -65,7 +65,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_env_temp (3.13.5)",
+   "display_name": "python_env_temp",
    "language": "python",
    "name": "python3"
   },
@@ -79,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
