--- a/cel.ipynb
+++ b/cel.ipynb
@@ -312,7 +312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_env_temp (3.13.5)",
+   "display_name": "python_env_temp",
    "language": "python",
    "name": "python3"
   },
@@ -326,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
