--- a/Writing/main.tex
+++ b/Writing/main.tex
@@ -1,39 +1,53 @@
-\documentclass[a4paper,12pt]{article}
-
+\documentclass{article}
 \usepackage[utf8]{inputenc}
-\usepackage{amsmath}
 \usepackage{graphicx}
+\usepackage[margin=1in]{geometry}
+\usepackage{amsmath}
 \usepackage{hyperref}
-\usepackage{geometry}
-\geometry{a4paper, margin=1in}
 
-\title{Interim Report}
-\author{George Kirby}
+
+\title{
+    
+    Final Year Project Interim Report\\[2cm]
+   % \includegraphics[width=0.25\textwidth]{UOS.png}\\[3cm]
+    \textbf{Research into predicting future battery performance through machine learning techniques} \\[2em]
+}
+\author{George W. Kirby \\[2em] \textit{200328186} \\[2em] }
 \date{\today}
 
 \begin{document}
-
 \maketitle
-\tableofcontents
+\vfill 
+\begin{center}
+    \textbf{Supervisor:} Dr. Ross Drummond
+\end{center}
+
+\newpage
+  \tableofcontents
 \newpage
 
-\section{Abstract}
+\section{Project Summary}
 This project investigates to use of machine learning techniques to model battery degredation over its lifetime; unlitmately throught model parameterisation and raw data regression.
-
+\cite{tran_comprehensive_2021}
 
 \section{Introduction}
 Provide background information here.
 
-\section{Methodology}
-Explain your methodology here.
+\section{Literature Review}
 
-\section{Results}
-Present your results here.
 
-\section{Conclusion}
-Write your conclusion here.
+\section{Current work and Results}
 
-\bibliographystyle{plain}
-\bibliography{references}
+
+\section{Plans for Remaining Work}
+
+
+\section{Self Assessment}
+
+
+\newpage
+\nocite{*}
+\bibliographystyle{IEEEtran}
+\bibliography{My_Library}
 
 \end{document}
