--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -25,12 +25,16 @@
 \newpage
   \tableofcontents
 \newpage
-
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{../nn_battery.png}
+    \caption{Inital end objective: Black Box Battery}
+\end{figure}
 \section{Introduction}
 This project investigates to use of machiddne learning techniques to model battery degredation over its lifetime; unlitmately throught model parameterisation and raw data regression.
 \cite{tran_comprehensive_2021}
 Due to dealings with large datasets, saved data has been stored locally on a home server, with code being run remotely via SSH.
-
+% \includegraphics[width=0.25\textwidth]{../nn_battery.png.png}\\[3cm]
 \section{Project progress}
 
 \section{Literature Review}
