--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -70,12 +70,7 @@ Atleast for a black box approach, to parameterise the current state of health, p
 
 
 \section{Current plan}
-
-
-
-\section{Self Assessment}
-
-
+Look at existing charging methods, including the complex ones and continous ones (explain complexity and non generalisability). 
 \newpage
 \nocite{*}
 \bibliographystyle{../IEEEtran/IEEEtran}
