--- a/BACK_29_1.ipynb
+++ b/BACK_29_1.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "ee782e2cb8f3143",
    "metadata": {
     "ExecuteTime": {
@@ -277,7 +277,7 @@
     "    # find the index where TestTime is closest to 5500\n",
     "    idx = (group['TestTime'] - 5500).abs().idxmin()\n",
     "    v = group.loc[idx, 'Volts']\n",
-    "    t = group.loc[group['TestTime'] < 6000, 'Temp 1'].max()\n",
+    "    t = group.loc[group['TestTime'] > 8000, 'Temp 1'].max()\n",
     "    time = group['TestTime'].max()\n",
     "    drain_time = group.loc[group['Volts'].idxmin(), 'TestTime']\n",
     "    amp_max = group['Amps'].max()\n",
