--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -76,7 +76,9 @@ applied at lower states of charge, where the battery is less prone to lithium pl
 
 
 \section{Current work and Results}
-
+Looking at the paper on CLO, large question about the early predictor aoutcome,
+mentions its a linear mechanism, how are they confimring what the characteristics are
+after atleast the knee point? 
 
 \section{Current plan}
 
