--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -93,6 +93,16 @@ after atleast the knee point?
     \end{itemize}
 
 
+     Baselinse batterys with fixed cc cv (need to look at the cc used)
+
+Idea: Use ICLOCS2, paings model to extract features and the ECM parameters
+Use this in a NN , possibly LSTM and NN to then allow for redicitoikn of furutre features
+
+CC stages - follow roughly what Georges Paper ustilised to minimise the constrains, maybe
+change the cost functions
+
+Adapdtive, id like to be able to 
+
 \section{Questions }
 
  \begin{itemize}
