--- a/MOLI_28.ipynb
+++ b/MOLI_28.ipynb
@@ -496,7 +496,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_env_temp",
+   "display_name": "python_env_temp (3.13.5)",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
