--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -10,7 +10,7 @@
 \title{
     
     Final Year Project Interim Report\\[2cm]
-    \includegraphics[width=0.25\textwidth]{UOS.png}\\[3cm]
+    \includegraphics[width=0.25\textwidth]{../Images/UOS.png}\\[3cm]
     \textbf{Implamenting adaptive multistage constant-current charging in lithium based batterys to reduce degredation} \\[2em]
 }
 \author{George W. Kirby \\[2em] \textit{200328186} \\[2em] }
@@ -61,7 +61,7 @@ What is this project? the general apprach
 \section{Project progress}
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.5\textwidth]{../nn_battery.png}
+    \includegraphics[width=0.5\textwidth]{../Images/nn_battery.png}
     \caption{Inital end objective: Black Box Battery}
 \end{figure}
 
