--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -35,7 +35,7 @@ applied voltages.
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.5\textwidth]{../nn_battery.png}
+    \includegraphics[width=0.5\textwidth]{../Images/nn_battery.png}
     \caption{Original end objective: Black Box Battery to allow for discorvery \& testing of optimal charging profiles}
 \end{figure}
 
