--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -1,11 +1,13 @@
-\documentclass{article}
+\documentclass[12pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage[margin=1in]{geometry}
 \usepackage{amsmath}
 \usepackage{hyperref}
+\setlength{\parskip}{0.8em plus 0.2em minus 0.1em}
+\setlength{\parindent}{0pt}
 
-
+\linespread{1.5}
 \title{
     \textbf{Notes FYP} \\[2em]
 }
@@ -112,7 +114,11 @@ Adapdtive, id like to be able to
         \item General guidance on the controll method, is this entire plan okay, any suggested reading? Some of the heavy matrices are a bit over my head. 
         (Happy with the idea of matracies transforming vectors, some basic forms of matrices w properties ect)
     \end{itemize}
+\section{Porgress Log}
+Entry 1: Terrible, a such fruitfull datasheet has made extracting parameters a breeze, infact, its taken such small amount of time, i have been free to complete all my
+other modules, its so nice not to have to do anything
 
+I definitley did not need to spend hours getting nowhere
 \nocite{*}
 \bibliographystyle{../IEEEtran/IEEEtran}
 \bibliography{../Interim_Report/My_Library}
