--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -154,7 +154,9 @@ Optimized Fit & 5500  &  950  & 0.007  & 0.003  \\
 \end{table}
 
 
-On the thermal note, maybe see if it does affect a single cycle path for even more accuracy
+On the thermal note, maybe see if it does affect a single cycle path for even more accuracy. From paper ... it shows that temperture dosent really affect the ocv cuve, mainly the internal resistance and maybe the ecm capaicotr.
+Its a misconseption that the charge (capaicty) changes with temperature, its the ability to deliver that changes, i.e energy extraction, directly related to internal resistance increase and limilts on max current draw for sei for the 
+cold temperatures too. (Cold temperatures are not looked at in this scope, mainly high temp effects during charge)
 
 
 \nocite{*}
