--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -176,7 +176,7 @@ Fixed\_OCV\_Symetric     & 5685 & 1561             & 0.026 & 0.04 & \text{d} \\
 \label{tab:battery_params}
 \end{table}
 
-
+Very much sturggling, always seems to be fitting it to the ocv curtve, capaictance is just reallyt stuggling. Nex step, run it through dans currnet and simulate on ode45
 
 On the thermal note, maybe see if it does affect a single cycle path for even more accuracy. From paper ... it shows that temperture dosent really affect the ocv cuve, mainly the internal resistance and maybe the ecm capaicotr.
 Its a misconeption that the charge (capaicty) changes with temperature, its the ability to deliver that changes, i.e energy extraction, directly related to internal resistance increase and limilts on max current draw for sei for the 
