More mats w temp

--- a/MOLI_28.ipynb
+++ b/MOLI_28.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b76027a74bc9a08b",
    "metadata": {
     "ExecuteTime": {
@@ -263,11 +263,11 @@
     "for cyc, data in Auto.groupby('Cyc#'):\n",
     "    if cyc % cycle_interval == 0 or cyc in [1, Auto['Cyc#'].max()]:  # also include first and last\n",
     "        export_path = os.path.join(export_dir, f\"cycle_{cyc}.csv\")\n",
-    "        mdict = {'tt': data['TestTime'].to_numpy().reshape(-1,1), 'u1': data['Amps'].to_numpy().reshape(-1,1), 'y': data['Volts'].to_numpy().reshape(-1,1)}\n",
-    "        savemat(os.path.join(export_dir, f\"cycle_{cyc}.mat\"), mdict)\n",
+    "        mdict = {'tt': data['TestTime'].to_numpy().reshape(-1,1), 'u1': data['Amps'].to_numpy().reshape(-1,1),'t': data['Temp 1'].to_numpy().reshape(-1,1), 'y': data['Volts'].to_numpy().reshape(-1,1)}\n",
+    "        savemat(os.path.join(export_dir, f\"MOLI_cycle_{cyc}.mat\"), mdict)\n",
     "        data[['TestTime', 'Amps', 'Volts', 'Temp 1']].to_csv(export_path, index=False)\n",
     "\n",
-    "print(f\"✅ Exported cycles every {cycle_interval} to '{export_dir}/'\")\n"
+    "print(f\"Exported cycles every {cycle_interval} to '{export_dir}/'\")\n"
    ]
   },
   {
@@ -496,7 +496,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_env_temp (3.13.5)",
+   "display_name": "python_env_temp",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
