--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -9,9 +9,9 @@
 
 \title{
     
-    Final Year Project Interim Report\\[2cm]
-    \includegraphics[width=0.25\textwidth]{../Images/UOS.png}\\[3cm]
-    \textbf{Implamenting adaptive multistage constant-current charging in lithium based batterys to reduce degredation} \\[2em]
+    Understanding the problem\\[1cm]
+    \includegraphics[width=0.25\textwidth]{../Images/UOS.png}\\[2cm]
+    \textbf{Implamenting multistage constant-current charging methods in lithium based batterys to reduce degredation} \\[1em]
 }
 \author{George W. Kirby \\[2em] \textit{200328186} \\[2em] }
 \date{\today}
